--- a/rezolve.html
+++ b/rezolve.html
@@ -44,6 +44,10 @@
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 
+
+
+
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -70,7 +74,12 @@
                 if(m[y])m[y]=function(){return g._w[y].apply(this,arguments)};
                 g._v="1.3.0";
             })(window,document,window['_fs_namespace'],'script','user');
-    	</script>
+
+
+
+
+
+    </script>
 
 </head>
 
@@ -86,6 +95,9 @@
             ga('send', 'pageview');
 
 
+
+
+
 </script>
 
 <script type="text/javascript">
@@ -98,6 +110,9 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
+
 
 
 </script>
@@ -167,13 +182,59 @@
             supervising the visual design work.
         </p>
 
+        <div id="showcase" class="subtitle">Showcase</div>
+        <p>
+            Due to NDA restrictions I cannot show any of the work done so far. What I can share is the work done for the
+            audition, before I got hired.
+        </p>
+
+        <p>
+            The challenge was to design a mobile e-commerce product description page with an exciting instant purchase
+            experience. So this allows buying a product without leaving the product page and going to a standard
+            e-commerce cart. The flow is optimised for the returning customer who has already expressed delivery and
+            payment preferences and makes it also fun for a first time user who needs to input this data.
+        </p>
+
+        <div id="wizard" class="subtitle2">The accordion approach</div>
+        <p>The first time user goes through three clearly separated steps in order to complete the purchase, without
+            leaving the product page.</p>
         <div class="gallery">
-            <a data-fancybox="wip"
-               data-caption="Case studies for this project are being worked on"
-               href="img/wip.png">
-                <img class="gallery1" src="img/wip.png"/>
+            <a data-fancybox="wizard"
+               data-caption="The first time user experience"
+               href="img/rezolve/rezolve-ib-new.png">
+                <img class="gallery1" src="img/rezolve/rezolve-ib-new.png"/>
             </a>
         </div>
+        <p>
+            The returning user is only asked to select the product options, while reviewing a summary of the other
+            choices. By tapping on the collapsed steps, the user is able to update her preferences.
+        </p>
+        <div class="gallery">
+            <a data-fancybox="wizard"
+               data-caption="The returning user experience"
+               href="img/rezolve/rezolve-ib-returning.png">
+                <img class="gallery1" src="img/rezolve/rezolve-ib-returning.png"/>
+            </a>
+        </div>
+
+        <div id="overlay" class="subtitle2">The overlay approach</div>
+        <div class="gallery">
+            <a data-fancybox="overlay"
+               data-caption="The overlay approach - multiple colour schemes"
+               href="img/rezolve/rezolve-ib-overlay1.png">
+                <img class="gallery2 left_image" src="img/rezolve/rezolve-ib-overlay1.png"/>
+            </a>
+            <a data-fancybox="overlay"
+               data-caption="The overlay approach - multiple colour schemes"
+               href="img/rezolve/rezolve-ib-overlay1.png">
+                <img class="gallery2 right_image" src="img/rezolve/rezolve-ib-overlay2.png"/>
+            </a>
+        </div>
+
+        <p>
+            Worth mentioning this is the result of team work. I contributed by doing the research, wireframes,
+            prototypes and guiding the visual design work. The beautiful graphics were done by my very talented team.
+        </p>
 
         <div id="disqus_thread"></div>
         <script>
@@ -193,6 +254,14 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
+
+
+
+
+
+
+
 
 
         </script>
