improved rezolve content with redesign content

--- a/rezolve.html
+++ b/rezolve.html
@@ -48,6 +48,11 @@
 
 
 
+
+
+
+
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -79,6 +84,11 @@
 
 
 
+
+
+
+
+
     </script>
 
 </head>
@@ -96,8 +106,6 @@
 
 
 
-
-
 </script>
 
 <script type="text/javascript">
@@ -110,8 +118,6 @@
                     initTopMenuActions("body_panel");
                 });
             });
-
-
 
 
 
@@ -150,47 +156,44 @@
             devices.</p>
 
         <div id="team_setup" class="subtitle2">Team setup</div>
-        <p>Rezolve is a totally remote company with people working from all over the world. I collaborate with the Head
-            of UX and the Graphic Designer on a daily basis. I also work with Product Managers and engineering teams to
-            clarify
-            needs, timelines and get feedback on designs.
+        <p>Rezolve is a totally remote company with people working from all over the world. I work closely with the Head
+            of UX and a visual designer. When needed, we reach out to a couple of design
+            agencies to extend our capabilities. I also work with Product Managers and engineering teams to
+            clarify needs, timelines and get feedback on designs.
         </p>
 
-        <div id="my_role" class="subtitle2">My role</div>
-        <p>I joined the company as a Senior UX Designer. Since then I have worked on some very interesting and
-            challenging projects:
+        <div id="my_role" class="subtitle2">Role and key achievements</div>
+        <p>I was hired as a Senior UX Designer and the role has gradually gotten more complex. I am involved in most
+            products of the company, I manage a couple of people and I attend and contribute to the product team’s
+            meetings regularly.
+        </p>
+
+        <p>My greatest achievements are all the result of teamwork, but there are some areas where I contributed more
+            and had the most ownership:
         </p>
 
         <ul class="article_list">
-            <li>A detailed usability audit for the mobile app and the self serve web platform for creators/merchants
+            <li>redesigned the Rezolve Experiece Portal to drastically improve usability, responsiveness, modularity,
+                and provide a simpler and friendlier look and feel, all based on a solid design system.
             </li>
-            <li>A redesign of the self serve web platform to address major usability issues, accommodate new
-                features, improve the mobile experience and a give a friendlier and more professional look and feel
+            <li>simplified the merchant onboarding flow from an assisted to a self-serve experience.
             </li>
-            <li>Marketing campaign analytics</li>
-            <li>E-commerce on boarding wizard that takes merchants through a pleasant experience while hiding the
-                complexity of integrating with several systems behind the scene
+            <li>enhanced the content creation flow to allow small merchants with little marketing experience to create
+                effective campaigns.
             </li>
-            <li>An admin tool for setting up the white label solution for partners</li>
-            <li>Major improvements to the content builder, from usability improvements on large and small screens to
-                incorporating templates and better content ideas
+            <li>reimagined the Instant Buy flow into a simple and intuitive experience for web and mobile and worked
+                with multiple design teams to produce it.
+            </li>
+            <li>developed a good relationship with engineering, to better understand technical constraints, provide
+                guidance and review changes.
             </li>
         </ul>
 
-        <p>I am responsible for understanding the user and business needs, the technical constraints and the delivery
-            timeline. I spend my day talking to stakeholders, wireframing, iterating and prototyping solutions and
-            supervising the visual design work.
-        </p>
-
-        <div id="showcase" class="subtitle">Showcase</div>
-        <p>
-            Due to NDA restrictions I cannot show any of the work done so far. What I can share is the work done for the
-            audition, before I got hired.
-        </p>
+        <div id="showcase" class="subtitle">Instant buy explorations</div>
 
         <p>
             The challenge was to design a mobile e-commerce product description page with an exciting instant purchase
-            experience. So this allows buying a product without leaving the product page and going to a standard
+            experience. This allows buying a product without leaving the product page and going to a standard
             e-commerce cart. The flow is optimised for the returning customer who has already expressed delivery and
             payment preferences and makes it also fun for a first time user who needs to input this data.
         </p>
@@ -206,16 +209,10 @@
             </a>
         </div>
         <p>
-            The returning user is only asked to select the product options, while reviewing a summary of the other
-            choices. By tapping on the collapsed steps, the user is able to update her preferences.
+            The returning user is only asked to select the product options, while the rest of the sections are
+            collapsed, but still show a summary. By tapping on the collapsed steps, the user is able to update her
+            preferences.
         </p>
-        <div class="gallery">
-            <a data-fancybox="wizard"
-               data-caption="The returning user experience"
-               href="img/rezolve/rezolve-ib-returning.png">
-                <img class="gallery1" src="img/rezolve/rezolve-ib-returning.png"/>
-            </a>
-        </div>
 
         <div id="overlay" class="subtitle2">The overlay approach</div>
         <div class="gallery">
@@ -226,14 +223,86 @@
             </a>
             <a data-fancybox="overlay"
                data-caption="The overlay approach - multiple colour schemes"
-               href="img/rezolve/rezolve-ib-overlay1.png">
+               href="img/rezolve/rezolve-ib-overlay2.png">
                 <img class="gallery2 right_image" src="img/rezolve/rezolve-ib-overlay2.png"/>
             </a>
         </div>
 
         <p>
-            Worth mentioning this is the result of team work. I contributed by doing the research, wireframes,
-            prototypes and guiding the visual design work. The beautiful graphics were done by my very talented team.
+            This is a more conventional approach, with the purchasing mechanism displayed on demand, as a bottom sheet.
+            Both of these early explorations ended up shaping the solutions released for web and mobile.
+        </p>
+
+        <div id="redesign" class="subtitle">The big redesign</div>
+        <p>The Rezolve Experience Portal (RXP) is a dashboard used by merchants to create and publish mobile
+            engagements. When I joined the company, RXP was being redesigned in order to incorporate new capabilities,
+            some large pieces of functionality from a recently acquired company.
+        </p>
+
+        <div class="subtitle2">Existing situation</div>
+        <p>The production version had a lot of usability issues, especially on smaller devices, and an inconsistent and
+            outdated look and feel. There was already a set of improved designs, including the new functionality, but
+            those were only addressing some of the aesthetic issues, while introducing more complexity.
+        </p>
+
+        <div class="gallery">
+            <a data-fancybox="rxp-before" class="needsBorder"
+               data-caption="The overlay approach - multiple colour schemes"
+               href="img/rezolve/engagement-target-old.png">
+                <img class="gallery2 left_image with_border" src="img/rezolve/engagement-target-old.png"/>
+            </a>
+            <a data-fancybox="rxp-before" class="needsBorder"
+               data-caption="The overlay approach - multiple colour schemes"
+               href="img/rezolve/engagement-target-bitplaces.png">
+                <img class="gallery2 right_image with_border" src="img/rezolve/engagement-target-bitplaces.png"/>
+            </a>
+        </div>
+
+        <p>A thorough UX audit of the existing situation brought to light some severe issues:</p>
+
+        <ul class="article_list">
+            <li>Lack of a pattern for selecting an existing entity vs creating a new one. This situation was quite
+                frequent during campaign creation and applied to entities like: locations, beacons, watermarked assets,
+                landing pages and lead generation forms.
+            </li>
+
+            <li>Poor new user experience. The app is based on specific mental model that was not clearly communicated.
+                The empty states were not informative. The new user had to put in a lot of effort before seeing a
+                benefit.
+            </li>
+
+            <li>Critical responsiveness issues. Central flows like the engagement creation and content creation provided
+                a poor experience on mobile.
+            </li>
+
+            <li>Outdated aesthetics. Aesthetics and attention to details play a huge role in creating trust.
+            </li>
+        </ul>
+
+
+        <div class="subtitle2">Improved solution</div>
+
+        <p>The redesign was meant to solve all of the above issues and more.
+        </p>
+
+        <div class="gallery">
+            <a data-fancybox="rxp-redesign" class="needsBorder"
+               data-caption="Location based engagement creation"
+               href="img/rezolve/engagement-target-redesign.png">
+                <img class="gallery1 with_border" src="img/rezolve/engagement-target-redesign.png"/>
+            </a>
+        </div>
+        <div class="gallery">
+            <a data-fancybox="rxp-redesign" class="needsBorder"
+               data-caption="Location baased engagement creation"
+               href="img/rezolve/engagement-target-new-redesign.png">
+                <img class="gallery1 with_border" src="img/rezolve/engagement-target-new-redesign.png"/>
+            </a>
+        </div>
+
+        <div class="subtitle">More to come soon</div>
+        <p>I am currently working on adding more interesting content to this project. Until then, please feel free to
+            reach out and ask for more. There are a ton of fun things I have worked on recently.
         </p>
 
         <div id="disqus_thread"></div>
