updated location anc contact info

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<div id="logo_container">
 			<div id="title_location">
 				<span id="title">product designer</span><br>
-				<span id="location">Cluj-Napoca, Romania</span>
+				<span id="location">Valencia, Spain</span>
 			</div>
 			<img id="logo_large" src="img/logo.svg"/>
 			<img id="logo_mobile" src="img/logo_mobile.svg"/>
