--- a/rezolve.html
+++ b/rezolve.html
@@ -44,15 +44,6 @@
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 
-
-
-
-
-
-
-
-
-
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -80,15 +71,6 @@
                 g._v="1.3.0";
             })(window,document,window['_fs_namespace'],'script','user');
 
-
-
-
-
-
-
-
-
-
     </script>
 
 </head>
@@ -104,8 +86,6 @@
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
 
-
-
 </script>
 
 <script type="text/javascript">
@@ -118,6 +98,11 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
+
+
+
 
 
 
@@ -189,7 +174,7 @@
             </li>
         </ul>
 
-        <div id="showcase" class="subtitle">Instant buy explorations</div>
+        <div id="showcase" class="subtitle">Reimagining the instant buy experience</div>
 
         <p>
             The challenge was to design a mobile e-commerce product description page with an exciting instant purchase
@@ -198,9 +183,14 @@
             payment preferences and makes it also fun for a first time user who needs to input this data.
         </p>
 
-        <div id="wizard" class="subtitle2">The accordion approach</div>
+        <div id="wizard" class="subtitle2">The accordion</div>
         <p>The first time user goes through three clearly separated steps in order to complete the purchase, without
             leaving the product page.</p>
+        <p>
+            The returning user is only asked to select the product options, while the rest of the sections are
+            collapsed, but still show a summary. By tapping on the collapsed steps, the user is able to update her
+            preferences.
+        </p>
         <div class="gallery">
             <a data-fancybox="wizard"
                data-caption="The first time user experience"
@@ -208,13 +198,13 @@
                 <img class="gallery1" src="img/rezolve/rezolve-ib-new.png"/>
             </a>
         </div>
-        <p>
-            The returning user is only asked to select the product options, while the rest of the sections are
-            collapsed, but still show a summary. By tapping on the collapsed steps, the user is able to update her
-            preferences.
-        </p>
 
-        <div id="overlay" class="subtitle2">The overlay approach</div>
+
+        <div id="overlay" class="subtitle2">The overlay</div>
+        <p>
+            This is a more conventional approach, with the purchasing mechanism displayed on demand, as a bottom sheet.
+            Both of these early explorations ended up shaping the solutions released for web and mobile.
+        </p>
         <div class="gallery">
             <a data-fancybox="overlay"
                data-caption="The overlay approach - multiple colour schemes"
@@ -228,12 +218,7 @@
             </a>
         </div>
 
-        <p>
-            This is a more conventional approach, with the purchasing mechanism displayed on demand, as a bottom sheet.
-            Both of these early explorations ended up shaping the solutions released for web and mobile.
-        </p>
-
-        <div id="redesign" class="subtitle">The big redesign</div>
+        <div id="redesign" class="subtitle">A fresh new design</div>
         <p>The Rezolve Experience Portal (RXP) is a dashboard used by merchants to create and publish mobile
             engagements. When I joined the company, RXP was being redesigned in order to incorporate new capabilities,
             some large pieces of functionality from a recently acquired company.
@@ -249,12 +234,7 @@
             <a data-fancybox="rxp-before" class="needsBorder"
                data-caption="The overlay approach - multiple colour schemes"
                href="img/rezolve/engagement-target-old.png">
-                <img class="gallery2 left_image with_border" src="img/rezolve/engagement-target-old.png"/>
-            </a>
-            <a data-fancybox="rxp-before" class="needsBorder"
-               data-caption="The overlay approach - multiple colour schemes"
-               href="img/rezolve/engagement-target-bitplaces.png">
-                <img class="gallery2 right_image with_border" src="img/rezolve/engagement-target-bitplaces.png"/>
+                <img class="gallery1  with_border" src="img/rezolve/engagement-target-old.png"/>
             </a>
         </div>
 
@@ -282,22 +262,67 @@
 
         <div class="subtitle2">Improved solution</div>
 
-        <p>The redesign was meant to solve all of the above issues and more.
+        <p>The redesign started with addressing the above mentioned issues and continued with others that were
+            discovered when looking at the flows in more depth.
         </p>
+        <ul class="article_list">
+            <li>Solid pattern for adding new entities. It works the same as a standalone flow or when spawned from a
+                more complex flow, like creating an engagement. The side overlay on large screens works as a full screen
+                dialog on small screens, consistent with the short duration of the operation.
+            </li>
+            <li>Vertical layout for the engagement creation wizard progress indicator. Better visual separation and more
+                adaptable to different screen sizes.
+            </li>
+            <li>Cleaner and friendlier visuals. We introduced a contrasting accent colour, fun illustrations, reduced
+                the visual clutter and increased negative space.
+            </li>
+        </ul>
 
         <div class="gallery">
+
+            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/Engagements-listing-large.png">
+                <img class="gallery1 with_border " src="img/rezolve/Engagements-listing-large.png"/>
+            </a>
+
+            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/Engagement screeen.png">
+                <img class="gallery1  with_border" src="img/rezolve/Engagement screeen.png"/>
+            </a>
+
             <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="Location based engagement creation"
                href="img/rezolve/engagement-target-redesign.png">
                 <img class="gallery1 with_border" src="img/rezolve/engagement-target-redesign.png"/>
             </a>
-        </div>
-        <div class="gallery">
+
             <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="Location baased engagement creation"
                href="img/rezolve/engagement-target-new-redesign.png">
                 <img class="gallery1 with_border" src="img/rezolve/engagement-target-new-redesign.png"/>
             </a>
+
+            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/Schedule.png">
+                <img class="gallery1 with_border" src="img/rezolve/Schedule.png"/>
+            </a>
+
+            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/Summary.png">
+                <img class="gallery1 with_border" src="img/rezolve/Summary.png"/>
+            </a>
+
+            <a data-fancybox="rxp-redesign-more"
+               data-caption="To be added"
+               href="img/rezolve/Frame 4820.png">
+                <img class="gallery1" src="img/rezolve/Frame 4820.png"/>
+            </a>
+
+
         </div>
 
         <div class="subtitle">More to come soon</div>
@@ -323,15 +348,6 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
-
-
-
-
-
-
-
-
-
 
         </script>
 
