new images added to Rezolve

--- a/rezolve.html
+++ b/rezolve.html
@@ -280,13 +280,13 @@
 
         <div class="gallery">
 
-            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+            <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="To be added"
                href="img/rezolve/Engagements-listing-large.png">
                 <img class="gallery1 with_border " src="img/rezolve/Engagements-listing-large.png"/>
             </a>
 
-            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+            <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="To be added"
                href="img/rezolve/Engagement screeen.png">
                 <img class="gallery1  with_border" src="img/rezolve/Engagement screeen.png"/>
@@ -304,19 +304,19 @@
                 <img class="gallery1 with_border" src="img/rezolve/engagement-target-new-redesign.png"/>
             </a>
 
-            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+            <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="To be added"
                href="img/rezolve/Schedule.png">
                 <img class="gallery1 with_border" src="img/rezolve/Schedule.png"/>
             </a>
 
-            <a data-fancybox="rxp-redesign-more" class="needsBorder"
+            <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="To be added"
                href="img/rezolve/Summary.png">
                 <img class="gallery1 with_border" src="img/rezolve/Summary.png"/>
             </a>
 
-            <a data-fancybox="rxp-redesign-more"
+            <a data-fancybox="rxp-redesign"
                data-caption="To be added"
                href="img/rezolve/Frame 4820.png">
                 <img class="gallery1" src="img/rezolve/Frame 4820.png"/>
